--- a/src/App.css
+++ b/src/App.css
@@ -116,3 +116,19 @@ nav h1 {
 #disabled {
   background-color: #3a393c;
 }
+
+.button {
+  width: 8rem;
+  height: 3rem;
+  border-radius: 10px;
+  background-color: grey;
+  color: white;
+  border: none;
+  font-size: medium;
+  transition-duration: 0.4s;
+}
+
+.button:hover {
+  background-color: rgb(59, 59, 59);
+  color: black;
+}
